Test with if statement.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -76,11 +76,12 @@
 {% endif %}
 
 {% if request.path == "/event/team-internet/2141" %}
- <div>Does this work?</div>
   {% if event.attendee_count %}
   <div class="ak-event-attendee-count">
       <strong>Attendee count:</strong>
+      {% if event.attendee_count >= 1 %}
       <div class="ak-event-attendee-count-output">{{ event.attendee_count }} attendee{{ event.attendee_count|pluralize }}</div>
+      {% endif %}
   </div>
   {% endif %}
 {% endif %}
