Test with if statement if less than 1.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -79,7 +79,7 @@
   {% if event.attendee_count %}
   <div class="ak-event-attendee-count">
       <strong>Attendee count:</strong>
-      {% if event.attendee_count >= 1 %}
+      {% if event.attendee_count <= 1 %}
       <div class="ak-event-attendee-count-output">{{ event.attendee_count }} attendee{{ event.attendee_count|pluralize }}</div>
       {% endif %}
   </div>
