--- a/event_search_results.html
+++ b/event_search_results.html
@@ -75,17 +75,12 @@
 </div>
 {% endif %}
 
-{% if request.path == "/event/team-internet/2141" %}
-  {% if event.attendee_count %}
-  <div class="ak-event-attendee-count">
-      <strong>Attendee count:</strong>
-      {% if event.attendee_count <= 1 %}
-      <div class="ak-event-attendee-count-output">{{ event.attendee_count }} attendee{{ event.attendee_count|pluralize }}</div>
-      {% endif %}
-  </div>
-  {% endif %}
+{% if event.attendee_count >= 10 %}
+<div class="ak-event-attendee-count">
+    <strong>Attendee count:</strong>
+    <div class="ak-event-attendee-count-output">{{ event.attendee_count }} attendee{{ event.attendee_count|pluralize }}</div>
+</div>
 {% endif %}
-
 
 <div style="margin-bottom: 20px;">
 <strong>Host:</strong>
