Revert showing RSVP count  to flag adjustable in AK.

--- a/event_search_results.html
+++ b/event_search_results.html
@@ -75,7 +75,7 @@
 </div>
 {% endif %}
 
-{% if event.attendee_count >= 10 %}
+{% if campaign.show_attendee_count %}
 <div class="ak-event-attendee-count">
     <strong>Attendee count:</strong>
     <div class="ak-event-attendee-count-output">{{ event.attendee_count }} attendee{{ event.attendee_count|pluralize }}</div>
