--- a/date_picker.html
+++ b/date_picker.html
@@ -30,7 +30,7 @@
            <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="12" format="time">
                       <select name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
                           <option {% if date_field.default_ampm == 'AM' %}selected{% endif %} value="AM">AM</option>
-                          <option {% if date_field.default_ampm == 'PM' %}selected=selected{% endif %} value="PM">PM</option>
+                          <option {% if date_field.default_ampm == 'PM' %}selected="selected"{% endif %} value="PM">PM</option>
                       </select>
           {% else %}
            <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="{{ date_field.default_time }}" format="time">
