--- a/event_create.html
+++ b/event_create.html
@@ -6,15 +6,17 @@
 <form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/{% else %}/act/{% endif %}" accept-charset="utf-8">
     <input type="hidden" name="page" value="{{ page.name }}">
 
-<div class="ak-grid-row">
-    <div class="ak-grid-col ak-grid-col-12-of-12">
-        {% if not update %}
-            <h2>{{ page.title }}</h2>
-        {% else %}
-            <h2>Update Event Information</h2>
-        {% endif %}
+    <div class="ak-grid-row">
+        <div class="ak-grid-col ak-grid-col-12-of-12">
+            {% if request.get_full_path == '/event/team-internet_create/create/?source=map' %}
+              <h2>TELL US ABOUT YOUR UPCOMING DROP-IN VISIT</h2>
+            {% elif not update %}
+                <h2>{{ page.title }}</h2>
+            {% else %}
+                <h2>Update Event Information</h2>
+            {% endif %}
+        </div>
     </div>
-</div>
 
 <div class="ak-grid-row ak-grid-row-inverted">
 
