Add select tag for event types.

--- a/event_create.html
+++ b/event_create.html
@@ -169,6 +169,7 @@
                         <label for="id_action_categories">
                             Event Types
                         </label>
+                        <select multiple="" name="action_categories" id="id_action_categories" class="ak-userfield-input">
                 			<option value="protestcongress" selected="">Event at Congressional office</option> 
                 		</select>
     	             </div>
