Add event id number to input tag.

--- a/event_attend.html
+++ b/event_attend.html
@@ -77,7 +77,7 @@
 
                     </div>
                   <label for="potential_host" class="ak-err-below">
-                    <span style="display:inline-block"><input value="1" name="action_potential_host" type="checkbox"></span>
+                    <span style="display:inline-block"><input value="{{ args.event_id }}" name="action_potential_host" type="checkbox"></span>
                     <span>I'd like to help make this event awesome.</span>
                   </label>
                     {% if form.ground_rules|is_nonblank and not update %}
