--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -4,7 +4,7 @@
     <div class="ak-grid-row">
         <div class="ak-grid-col ak-grid-col-12-of-12">  
             {% if not update %}
-                <h2>TELL US ABOUT YOUR UPCOMING DROP-IN VISIT</h2>
+                <h2>IT’S RECESS, BUT WE’RE NOT PLAYING: DEFEND NET NEUTRALITY ON APRIL 5TH.</h2>
             {% else %}
                 <h2>Update Event Information</h2>
             {% endif %}
