--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -23,9 +23,9 @@
         
       {% if not update and form.host_text %}      
         <div class="ak-page-content">
-            <p>Lawmakers are home from Washington, D.C. February 19-23 for a congressional recess. This a crucial time to show up in force at their local offices and put real pressure on them to support the Congressional Review Act (CRA) effort to reverse the FCC’s repeal of net neutrality.</p>
+            <p>Lawmakers are home from Washington, D.C. until April 6th for a congressional recess so we’re joining forces at noon on April 5th all around the country at our members of Congress’ office to rally for net neutrality. This a crucial opportunity to put real pressure on our lawmakers to support the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal of net neutrality rules.</p>
             <p>Tell us which lawmaker you are visiting and at which office location so we can post it on the <a href="https://events.battleforthenet.com/">map</a> and recruit others to join you.</p>
-            <p>Don't worry if you’ve never done anything like this before–we’ll provide you with everything you’ll need. If you have questions about how to complete this form, reach out to us at <a href="mailto:support@demandprogress.org">support@demandprogress.org.</a></p>
+            <p>Don't worry if you’ve never done anything like this before. We’ll provide you with everything you’ll need, including a coaching call for event hosts and a pre-event call for hosts and attendees. We’ll also help recruit people to your event—though you should definitely encourage your friends to join you! If you have questions about how to complete this form, reach out to us at <a href="mailto:support@demandprogress.org">support@demandprogress.org.</a></p>
         </div>
       {% endif %}  
 
