Update event info text.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -38,10 +38,7 @@
 
              <div id="event-info">
                  <h3>Tell us where your event is so others can join you!</h3>
-                 <p>We need just one more vote in the Senate and we already have 100 cosponsors in the House, but need 218 representatives total on our side to win. </p>
-
-                 <p>Use this net neutrality CRA <a href="https://www.battleforthenet.com/scoreboard/">scoreboard</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA vote, then find their local office <a href="https://docs.google.com/spreadsheets/u/1/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">here</a>. </p>
-
+                 <p>Use <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. Need help figuring out who represents you in Congress? Click <a href="https://callyourrep.co/">here</a>. Preserving the open Internet matters to the overwhelming majority of Americans, so it’s important that we persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are. </p>
                  <div class="unknown_user">
                      <!--
                          This only shows if the user form includes all of the
