Update event title.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -95,7 +95,7 @@
                      {% if campaign.use_title %}
                          <div>
                              <label for="id_event_title">Event name<span class="ak-required-flag">*</span></label>
-                             <input id="id_event_title" type="text" name="event_title" value="Be an Internet hero, [Senator/ Representative (name)]">
+                             <input id="id_event_title" type="text" name="event_title" value="It’s recess but we’re not playing on net neutrality [Senator/ Representative (name)]">
                          </div>
                      {% endif %}
 
