Commented out event types input box.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -184,12 +184,12 @@
                              </label>
                          </div>
                      {% endif %}
-                     <div id="ak-fieldbox-action_categories" class="ak-err-below">
+                     <!--<div id="ak-fieldbox-action_categories" class="ak-err-below">
                        <label for="id_action_categories">
                           Event Types
                           </label>
                       <select multiple="" name="action_categories" id="id_action_categories" class="ak-userfield-input">
-                    <!--<option value="meetinghouse">Drop-in at Congressional office</option> 
+                    <option value="meetinghouse">Drop-in at Congressional office</option> 
                     <option value="canvassing">Canvass/Door Knocking</option> 
                     <option value="petitions">Collecting Petitions</option>
                     <option value="deliverhouse">Delivery of Letters or Petitions to Elected Official, House</option> 
@@ -197,18 +197,18 @@
                     <option value="signs">Distribute Signs</option> 
                     <option value="dropinshouse">Drop-ins at Congressional Office, House</option> 
                     <option value="dropinssenate">Drop-ins at Congressional Office, Senate</option> 
-                    <option value="officehours">Office Hours</option> -->
+                    <option value="officehours">Office Hours</option>
                         <option value="protestrally">Event at Verizon store</option> 
                         <option value="protestcongress"  SELECTED>Event at Congressional office</option> 
-                    <!--<option value="sitin">Sit-In</option> 
-                    <option value="letters">Submitting Letters to the Editor</option> -->
+                    <option value="sitin">Sit-In</option> 
+                    <option value="letters">Submitting Letters to the Editor</option>
                     <option value="townhall">Town Hall</option> 
-                    <!--<option value="teletownhall">Tele-Town Hall</option> 
+                    <option value="teletownhall">Tele-Town Hall</option> 
                     <option value="emptychairtownhall">Empty Chair Town Hall</option> 
-                    <option value="visibility">Visibility Event</option> -->
+                    <option value="visibility">Visibility Event</option>
                         <option value="other">Other</option>
                       </select>
-    	             </div>
+    	             </div>!-->
                  </div>
              </div>
        
