--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -250,11 +250,13 @@
                     </label>
                    
                       <textarea id="id_event_public_description" name="event_public_description">
-RSVP now to visit your lawmaker’s office sometime between 12:00pm-1:00pm on February 27nd and drop-off materials encouraging your lawmaker to be an Internet hero by supporting the congressional effort to save net neutrality.
+RSVP now to sign-wave for net neutrality outside your lawmaker’s office on Thursday, April 5th at 12PM and drop-off materials explaining why they need to vote for the CRA and protect real net neutrality rules.
 
-Lawmakers are home from Washington, D.C. February 19-23 for a congressional recess. This a crucial time to show up in force at their local offices and put real pressure on them to support the Congressional Review Act (CRA) effort to reverse the FCC’s repeal of net neutrality.
+Net neutrality is not dead yet and it’s not too late to save it, but the clock is ticking! Congress will soon vote on the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal, and before the CRA comes up for a vote, we need to make sure that as many lawmakers as possible are on our side. 
 
-Once you RSVP, you’ll get materials to drop-off at your lawmaker’s office during your visit and we’ll connect you with others in your community attending. Maybe you’ll run into a friend or neighbor but if you’re serious about this event, let us know so we can help you make it awesome!
+Lawmakers are home for a congressional recess until April 6th so this a crucial opportunity to show up in force and put real pressure on them to support the CRA effort. 
+
+Once you RSVP, you’ll get materials to drop-off at your lawmaker’s office during your visit and we’ll connect you with others in your community attending through a pre-event call. 
                       </textarea>
                     </div>
 
