--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -262,7 +262,7 @@ Once you RSVP, you’ll get materials to drop-off at your lawmaker’s office du
 
                     <div>
                     <label for="id_event_directions">Directions to event</label>             
-                        <textarea id="id_event_directions" name="event_directions">[If you want others to join you for this visit, decide on a place and location to meet up and let people know here.]</textarea>                    
+                        <textarea id="id_event_directions" name="event_directions"></textarea>                    
                     </div>
 
                     <div style="display:none;">
