Add target property to anchor tags with href links.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -24,7 +24,7 @@
       {% if not update and form.host_text %}      
         <div class="ak-page-content">
             <p>Lawmakers are home from Washington, D.C. until April 6th for a congressional recess so we’re joining forces at noon on April 5th all around the country at our members of Congress’ office to rally for net neutrality. This a crucial opportunity to put real pressure on our lawmakers to support the Congressional Review Act (CRA) resolution to reverse the FCC’s repeal of net neutrality rules.</p>
-            <p>Tell us which lawmaker you are visiting and at which office location so we can post it on the <a href="https://events.battleforthenet.com/">map</a> and recruit others to join you.</p>
+            <p>Tell us which lawmaker you are visiting and at which office location so we can post it on the <a target="_blank" href="https://events.battleforthenet.com/">map</a> and recruit others to join you.</p>
             <p>Don't worry if you’ve never done anything like this before. We’ll provide you with everything you’ll need, including a coaching call for event hosts and a pre-event call for hosts and attendees. We’ll also help recruit people to your event—though you should definitely encourage your friends to join you! If you have questions about how to complete this form, reach out to us at <a href="mailto:support@demandprogress.org">support@demandprogress.org.</a></p>
         </div>
       {% endif %}  
@@ -38,7 +38,7 @@
 
              <div id="event-info">
                  <h3>Tell us where your event is so others can join you!</h3>
-                 <p>Use <a href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. Need help figuring out who represents you in Congress? Click <a href="https://callyourrep.co/">here</a>. Preserving the open Internet matters to the overwhelming majority of Americans, so it’s important that we persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are. </p>
+                 <p>Use <a target="_blank" href="https://docs.google.com/spreadsheets/d/1wa942AqOx61WB0k43MbfOzJwdDBIPW7s9KK-dqWWs-U/edit#gid=0">this</a> to find out which one of your lawmaker’s still has not come out in support of the net neutrality CRA resolution and find their in-district office address. Need help figuring out who represents you in Congress? Click <a target="_blank" href="https://callyourrep.co/">here</a>. Preserving the open Internet matters to the overwhelming majority of Americans, so it’s important that we persuade as many members of Congress as possible to vote for the CRA resolution and thank those that already are. </p>
                  <div class="unknown_user">
                      <!--
                          This only shows if the user form includes all of the
