Add input event max attendees with value 1000.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -184,6 +184,7 @@
                              </label>
                          </div>
                      {% endif %}
+                     <input id="id_event_max_attendees" type="hidden" name="event_max_attendees" value="1000">
                      <!--<div id="ak-fieldbox-action_categories" class="ak-err-below">
                        <label for="id_action_categories">
                           Event Types
