Add default value for date input tag.

--- a/event_create.html
+++ b/event_create.html
@@ -422,6 +422,8 @@ Join other Team Internet members at the protest. Internet users outraged by top 
             }
         });
     });
+
+    document.getElementById("defaultDateValue").defaultValue = "04/05/2018";
 </script>
 
 {% if update %}
