--- a/event_create.html
+++ b/event_create.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-{% if "?source=map" in request.get_full_path %}
+{% if "source=map" in request.get_full_path %}
 {% include "./event_attend_source_map.html" %}
 {% else %}
 <form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/{% else %}/act/{% endif %}" accept-charset="utf-8">
