--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -110,7 +110,7 @@
                                     <input type="hidden" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}">
                                     {{ date_field.default_date }}
                                   {% else %}
-                                    {% if request.get_full_path in 'source=map' %}
+                                    {% if 'source=map' in request.get_full_path %}
                                     <input id="defaultDateValue" type="text" placeholder="mm/dd/yyyy" size="10" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" format="date">
                                       {% else %}
                                     <input type="text" placeholder="mm/dd/yyyy" size="10" name="{{ date_field.name }}_date" id="id_{{ date_field.name }}_date" value="{{ date_field.default_date }}" format="date">  
@@ -129,7 +129,7 @@
                                         <input type="hidden" name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm" value="{{ date_field.default_ampm }}">
                                         {{ date_field.default_time }} {{ date_field.default_ampm }}
                                     {% else %}
-                                      {% if request.get_full_path in 'source=map' %}
+                                      {% if 'source=map' in request.get_full_path %}
                                        <input type="text" placeholder="hh:mm" size="8" name="{{ date_field.name }}_time" id="id_{{ date_field.name }}_time" value="12" format="time">
                                             <select name="{{ date_field.name }}_ampm" id="id_{{ date_field.name }}_ampm">
                                                 <option {% if date_field.default_ampm == 'AM' %}selected{% endif %} value="AM">AM</option>
