Update text for event info.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -90,7 +90,7 @@
        
         <div id="ak-event-info">
                  <h3>Tell us about your event:</h3>
-                 <div>Tell us which lawmaker you are visiting.</div>
+                 <div>Tell us which lawmaker you are visiting by adding their name to the "Event Name" section below. For example, before submitting your event, the event name should read, "It’s recess but we’re not playing on net neutrality Senator John Kennedy," or, "It’s recess but we’re not playing on net neutrality Representative Mike Coffman."</div>
                  <div>
                      {% if campaign.use_title %}
                          <div>
