--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -1,4 +1,4 @@
-<form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/{% else %}/act/{% endif %}" accept-charset="utf-8">
+<form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/?source=map{% else %}/act/{% endif %}" accept-charset="utf-8">
     <input type="hidden" name="page" value="{{ page.name }}">
 
     <div class="ak-grid-row">
