Add action map_event tag to events submitted.

--- a/event_attend_source_map.html
+++ b/event_attend_source_map.html
@@ -1,6 +1,6 @@
-<form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/?source=map{% else %}/act/{% endif %}" accept-charset="utf-8">
+<form class="ak-form norecognize" name="act" method="POST" action="{% if update %}/update_action/{% else %}/act/{% endif %}" accept-charset="utf-8">
     <input type="hidden" name="page" value="{{ page.name }}">
-
+    <input type="hidden" name="action_map_event" value="1">
     <div class="ak-grid-row">
         <div class="ak-grid-col ak-grid-col-12-of-12">  
             {% if not update %}
