--- a/event_create.html
+++ b/event_create.html
@@ -12,7 +12,7 @@
     <div class="ak-grid-row">
         <div class="ak-grid-col ak-grid-col-12-of-12">
             {% if not update %}
-                <h2>{{ page.title }}</h2>
+                <h2>IT’S RECESS, BUT WE’RE NOT PLAYING: DEFEND NET NEUTRALITY ON APRIL 5TH.</h2>
             {% else %}
                 <h2>Update Event Information</h2>
             {% endif %}
