Update event info text to tell us about your event section.

--- a/event_create.html
+++ b/event_create.html
@@ -93,8 +93,8 @@
                 </div>
 
             <div id="ak-event-info">
-                <h3>Tell us about your protest:</h3>
-                <div>Plan your protest at a Verizon store or Congressional office for a time that's easy for you and others to get there. Lunchtime and the end of the work day (and before the store or office closes) are the best times.</div>
+                <h3>Tell us about your event:</h3>
+                <div>Tell us which lawmaker you are visiting by adding their name to the "Event Name" section below. For example, before submitting your event, the event name should read, "It’s recess but we’re not playing on net neutrality Senator John Kennedy," or, "It’s recess but we’re not playing on net neutrality Representative Mike Coffman."</div>
                 <div>
                     {% if campaign.use_title %}
                         <div>
